# March-Madness-Predictor

./: CMakeLists.txt  College Basketball  College Basketball Games  College Basketball Teams  College Basketball Women Games  College Basketball Women Teams  College Basketball Women's  CollegeBasketballGames.txt  CollegeBasketballTeams.txt  CollegeBasketballWomenGames.txt  CollegeBasketballWomenTeams.txt  Game.cpp  Game.h  Games.txt  MarchMadness.cbp  MarchMadness.cpp  MarchMadness.h  National Basketball Association  National Basketball Association Games  National Basketball Association Teams  NationalBasketballAssociationGames.txt  NationalBasketballAssociationTeams.txt  README.md  Team.cpp  Team.h  Teams.txt  TestGames.txt  TestTeams.txt  scorehelp.md
Eigen_Folder/unsupported/Eigen/: OpenGLSupport
src/: Game.cpp  Game.h  MarchMadness.cpp  MarchMadness.h  Team.cpp  Team.h
